# ai-real-estate-fund

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  compose.production.yml  dev.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  commercial-license.yml  feature_request.md
.github/workflows/: production.yml  release.yml  tests.yml
app/: README.md  run.sh
app/backend/: README.md  __init__.py  alembic.ini  dependencies.py  logging_config.py  main.py  settings.py
app/backend/alembic/: README  env.py  script.py.mako
app/backend/database/: connection.py  migrations.py  models.py  seed.py
app/backend/middleware/: audit.py  errors.py  request_id.py  request_limits.py  security_headers.py  timing.py
app/backend/models/: events.py  schemas.py
app/backend/repositories/: analysis_repository.py  comp_repository.py  property_repository.py  run_repository.py
app/backend/routes/: analyses.py  committee.py  comps.py  exports.py  health.py  institutional.py  llm.py  ops.py  portfolio.py  properties.py  research.py  scenarios.py  storage.py  validation.py  watchlist.py
app/backend/services/: analysis_service.py  auth.py  backtest_service.py  comp_service.py  institutional_service.py  portfolio_service.py  report_service.py  scheduler.py  validation_service.py  watchlist_service.py
app/backend/utils/: json.py  pagination.py  parsing.py
app/backend/workers/: jobs.py
app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/frontend/design/: diligence-terminal.html  quiet-cartography.md
app/frontend/src/: App.tsx  main.tsx  styles.css  types.ts
config/: production.toml  staging.toml
docs/: PUBLISHING.md  agents.md  api.md  architecture.md  asset_management.md  backtesting.md  data_sources.md  deployment.md  frontend.md  institutional.md  integrations.md  model_risk.md  model_validation.md  roadmap.md  sample_memo.md  sources.md
docs/adr/: 0001-production-readiness-boundary.md  0002-stdlib-core.md  0003-audit-hash-chain.md  0004-deterministic-scores-llm-debate.md
docs/production/: API_SECURITY_MODEL.md  DATA_GOVERNANCE.md  DEPLOYMENT.md  MODEL_RISK_MANAGEMENT.md  OBSERVABILITY.md  PRODUCTION_READINESS.md  RELEASE_CHECKLIST.md  SECURITY_HARDENING.md
docs/runbooks/: BACKUP_RESTORE.md  INCIDENT_RESPONSE.md  KEY_ROTATION.md
examples/: duplex_sunbelt.json  market_snapshots.json  properties.csv  rent_comps.csv  sale_comps.csv  single_family_midwest.json  small_multifamily_growth_market.json
examples/research/: data_room_manifest_template.json  historical_deal_panel.csv  market_fundamentals_panel.csv  rent_comp_panel.csv  sale_comp_panel.csv
scripts/: backup_sqlite.py  dev.sh  make_release_zip.sh  migrate.py  preflight.py  publish_github.sh  release.sh  release_manifest.py  restore_sqlite.py  rotate_api_key.py  smoke_test.py
src/ai_real_estate_fund/: __init__.py  cli.py  committee.py  data_loader.py  data_sources.py  finance.py  llm.py  models.py  report.py  report_pdf.py  scenarios.py  sensitivity.py
src/ai_real_estate_fund/backtesting/: __init__.py  cli.py  engine.py  fixtures.py  metrics.py  models.py  output.py  portfolio.py  strategy.py
src/ai_real_estate_fund/data/: __init__.py  cache.py  (+4 more)
tests/: test_asset_integrations_validation.py  test_asset_management_golden.py  test_audit.py  test_auth_rate_limit_privacy.py  test_backend.py  test_backtesting.py  test_committee_roster.py  test_dscr_sentinel.py  test_extra_agents.py  test_finance.py  test_health_model_risk.py  test_institutional.py  test_integrations_golden.py  test_investment_committee.py  test_llm_analysts.py  test_model_validation_golden.py  test_phase1_api.py  test_phase2_api.py  test_portfolio.py  test_production_settings.py  test_readiness_release.py  test_recommendation_thresholds.py  test_report_pdf.py  test_research_golden.py  test_sensitivity.py  test_tools.py  test_underwriting_golden.py  test_underwriting_research.py  test_validation.py  test_valuation.py
tests/data/: golden_asset_management.json  golden_integrations.json  golden_model_validation.json  golden_research.json  golden_underwriting.json
(+252 files in other folders)
